* delete CHost (mfc_host.*)

--- a/00proj.vc10/XM6.vcxproj
+++ b/00proj.vc10/XM6.vcxproj
@@ -58,8 +58,7 @@
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <AssemblerOutput>
-      </AssemblerOutput>
+      <AssemblerOutput>NoListing</AssemblerOutput>
       <WarningLevel>Level4</WarningLevel>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <PrecompiledHeaderOutputFile>$(IntDir)$(TargetName).pch</PrecompiledHeaderOutputFile>
@@ -96,7 +95,7 @@
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>stdafx.h</PrecompiledHeaderFile>
-      <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
+      <AssemblerOutput>NoListing</AssemblerOutput>
       <WarningLevel>Level4</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <PrecompiledHeaderOutputFile>$(IntDir)$(TargetName).pch</PrecompiledHeaderOutputFile>
@@ -178,7 +177,6 @@
     <ClCompile Include="..\mfc\mfc_com.cpp" />
     <ClCompile Include="..\mfc\mfc_draw.cpp" />
     <ClCompile Include="..\mfc\mfc_frm.cpp" />
-    <ClCompile Include="..\mfc\mfc_host.cpp" />
     <ClCompile Include="..\mfc\mfc_sch.cpp" />
   </ItemGroup>
   <ItemGroup>
